src/test/ui-fulldeps/proc-macro/generate-mod.stderr
error[E0412]: cannot find type `Outer` in this scope
  --> $DIR/generate-mod.rs:19:1
   |
LL | generate_mod::check!(); //~ ERROR cannot find type `Outer` in this scope
   | ^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
